--- a/requirements.txt
+++ b/requirements.txt
@@ -6,4 +6,14 @@ itsdangerous==2.1.2
 Jinja2==3.1.2
 MarkupSafe==2.1.3
 Werkzeug==2.3.6
-scrapy==2.5.1
+scrapy
+pyotp
+gspread
+google-cloud-bigquery
+google-cloud-core
+google-cloud-storage
+google-auth
+google-auth-oauthlib
+google-auth-httplib2
+google-api-python-client
+google-api-core
