--- a/requirements.txt
+++ b/requirements.txt
@@ -1,19 +1,5 @@
-blinker==1.6.2
-click==8.1.6
-colorama==0.4.6
-Flask==2.3.2
-itsdangerous==2.1.2
-Jinja2==3.1.2
-MarkupSafe==2.1.3
-Werkzeug==2.3.6
+
 scrapy
-pyotp
-gspread
-google-cloud-bigquery
-google-cloud-core
-google-cloud-storage
-google-auth
-google-auth-oauthlib
-google-auth-httplib2
-google-api-python-client
-google-api-core
+SQLAlchemy
+scrapy_playwright
+psycopg2-binary 
