--- a/scrapy.cfg
+++ b/scrapy.cfg
@@ -4,8 +4,8 @@
 # https://scrapyd.readthedocs.io/en/latest/deploy.html
 
 [settings]
-default = Amazom_Webcrawler.settings
+default = Amazon_Webcrawler.settings
 
 [deploy]
 #url = http://localhost:6800/
-project = Amazom_Webcrawler
+project = Amazon_Webcrawler
